--- a/QdaoCaseManager/QdaoCaseManager/wwwroot/app.css
+++ b/QdaoCaseManager/QdaoCaseManager/wwwroot/app.css
@@ -49,3 +49,8 @@ h1:focus {
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
 }
+
+/*Custom CSS*/
+.sidebar-qdao {
+    background-image: linear-gradient(120deg, rgba(2,0,36,1) 0%, rgba(0,124,186,1) 58%, rgba(0,212,255,1) 100%) !important;
+}
