--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/_Imports.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/_Imports.razor
@@ -1,2 +1,3 @@
 ﻿@using QdaoCaseManager.Components.Account.Shared
-@layout AccountLayout
+@using QdaoCaseManager.Components.Layout
+@layout AuthenticationPageLayout
