--- a/QdaoCaseManager/QdaoCaseManager/wwwroot/app.css
+++ b/QdaoCaseManager/QdaoCaseManager/wwwroot/app.css
@@ -54,3 +54,55 @@ h1:focus {
 .sidebar-qdao {
     background-image: linear-gradient(120deg, rgba(2,0,36,1) 0%, rgba(0,124,186,1) 58%, rgba(0,212,255,1) 100%) !important;
 }
+
+
+.login-container {
+    margin-top: 5%;
+    border: 1px solid #CCD1D1;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    max-width: 50%;
+}
+
+.ads {
+    background-image: linear-gradient(120deg, rgba(2,0,36,1) 0%, rgba(0,124,186,1) 58%, rgba(0,212,255,1) 100%);
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    color: #fff;
+    padding: 15px;
+    text-align: center;
+    min-height: 80vh;
+}
+
+    .ads h1 {
+        margin-top: 50%;
+    }
+
+#fl {
+    font-weight: 800;
+}
+
+#sl {
+    font-weight: 100 !important;
+}
+
+.login-profile-img {
+    text-align: center;
+}
+
+    .login-profile-img img {
+        border-radius: 50%;
+    }
+
+
+.login-form {
+    padding: 15px;
+}
+
+    .login-form h3 {
+        text-align: center;
+        padding-top: 15px;
+        padding-bottom: 15px;
+    }
+
+
