--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/RegisterConfirmation.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/RegisterConfirmation.razor
@@ -12,21 +12,32 @@
 
 <PageTitle>Register confirmation</PageTitle>
 
-<h1>Register confirmation</h1>
+<div class="container login-container">
+    <div class="row">
+        <div class="col-md-6 ads">
+            <h1><span id="fl">QDAO</span><br /><span id="sl">Case Manager</span></h1>
+        </div>
+        <div class="col-md-6 login-form">
+            <h2>Register confirmation</h2>
 
-<StatusMessage Message="@statusMessage" />
+            <StatusMessage Message="@statusMessage" />
 
-@if (emailConfirmationLink is not null)
-{
-    <p>
-        This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
-        Normally this would be emailed: <a href="@emailConfirmationLink">Click here to confirm your account</a>
-    </p>
-}
-else
-{
-    <p>Please check your email to confirm your account.</p>
-}
+            @if (emailConfirmationLink is not null)
+            {
+                <p>
+                    This app does not currently have a real email sender registered, see <a href="https://aka.ms/aspaccountconf">these docs</a> for how to configure a real email sender.
+                    Normally this would be emailed: <a href="@emailConfirmationLink">Click here to confirm your account</a>
+                </p>
+            }
+            else
+            {
+                <p>Please check your email to confirm your account.</p>
+            }
+
+        </div>
+    </div>
+</div>
+
 
 @code {
     private string? emailConfirmationLink;
