--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/RegisterConfirmation.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/RegisterConfirmation.razor
@@ -65,8 +65,7 @@
             HttpContext.Response.StatusCode = StatusCodes.Status404NotFound;
             statusMessage = "Error finding user for unspecified email";
         }
-        else if (EmailSender is IdentityNoOpEmailSender)
-        {
+       
             // Once you add a real email sender, you should remove this code that lets you confirm the account
             var userId = await UserManager.GetUserIdAsync(user);
             var code = await UserManager.GenerateEmailConfirmationTokenAsync(user);
@@ -74,6 +73,7 @@
             emailConfirmationLink = NavigationManager.GetUriWithQueryParameters(
                 NavigationManager.ToAbsoluteUri("Account/ConfirmEmail").AbsoluteUri,
                 new Dictionary<string, object?> { ["userId"] = userId, ["code"] = code, ["returnUrl"] = ReturnUrl });
-        }
+           
+            await EmailSender.SendConfirmationLinkAsync(user,user.Email,emailConfirmationLink);
     }
 }
