Confim Email Page Design fix

--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ConfirmEmailChange.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ConfirmEmailChange.razor
@@ -11,10 +11,18 @@
 
 <PageTitle>Confirm email change</PageTitle>
 
-<h1>Confirm email change</h1>
+<div class="container login-container">
+    <div class="row">
+        <div class="col-md-6 ads">
+            <h1><span id="fl">QDAO</span><br /><span id="sl">Case Manager</span></h1>
+        </div>
+        <div class="col-md-6 login-form">
+            <h2>Confirm email change</h2>
 
-<StatusMessage Message="@message" />
-
+            <StatusMessage Message="@message" />
+        </div>
+    </div>
+</div>
 @code {
     private string? message;
 
