--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ForgotPasswordConfirmation.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ForgotPasswordConfirmation.razor
@@ -2,7 +2,14 @@
 
 <PageTitle>Forgot password confirmation</PageTitle>
 
-<h1>Forgot password confirmation</h1>
-<p>
-    Please check your email to reset your password.
-</p>
+<div class="container login-container">
+    <div class="row">
+        <div class="col-md-6 ads">
+            <h1><span id="fl">QDAO</span><br /><span id="sl">Case Manager</span></h1>
+        </div>
+        <div class="col-md-6 login-form">
+            <h2>Forgot password confirmation</h2>
+            <p>Please check your email to reset your password.</p>
+        </div>
+    </div>
+</div>
