--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/InvalidUser.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/InvalidUser.razor
@@ -2,6 +2,18 @@
 
 <PageTitle>Invalid user</PageTitle>
 
-<h3>Invalid user</h3>
 
-<StatusMessage />
+
+<div class="container login-container">
+    <div class="row">
+        <div class="col-md-6 ads">
+            <h1><span id="fl">QDAO</span><br /><span id="sl">Case Manager</span></h1>
+        </div>
+        <div class="col-md-6 login-form">
+            <h2>Invalid user</h2>
+            <p> The password reset link is invalid.</p>
+            <StatusMessage />
+
+        </div>
+    </div>
+</div>
