--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ConfirmEmail.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ConfirmEmail.razor
@@ -10,8 +10,18 @@
 
 <PageTitle>Confirm email</PageTitle>
 
-<h1>Confirm email</h1>
-<StatusMessage Message="@statusMessage" />
+<div class="container login-container">
+    <div class="row">
+        <div class="col-md-6 ads">
+            <h1><span id="fl">QDAO</span><br /><span id="sl">Case Manager</span></h1>
+        </div>
+        <div class="col-md-6 login-form">
+            <h2>Confirm email</h2>
+
+            <StatusMessage Message="@statusMessage" />
+        </div>
+    </div>
+</div>
 
 @code {
     private string? statusMessage;
