--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/InvalidPasswordReset.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/InvalidPasswordReset.razor
@@ -2,7 +2,14 @@
 
 <PageTitle>Invalid password reset</PageTitle>
 
-<h1>Invalid password reset</h1>
-<p>
-    The password reset link is invalid.
-</p>
+<div class="container login-container">
+    <div class="row">
+        <div class="col-md-6 ads">
+            <h1><span id="fl">QDAO</span><br /><span id="sl">Case Manager</span></h1>
+        </div>
+        <div class="col-md-6 login-form">
+            <h2>Invalid password reset</h2>
+            <p> The password reset link is invalid.</p>
+        </div>
+    </div>
+</div>
