--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/PersonalData.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/PersonalData.razor
@@ -13,13 +13,14 @@
         <p>
             <strong>Deleting this data will permanently remove your account, and this cannot be recovered.</strong>
         </p>
+        <div class="btn-toolbar">
         <form action="Account/Manage/DownloadPersonalData" method="post">
             <AntiforgeryToken />
-            <button class="btn btn-primary" type="submit">Download</button>
+                <button class="btn btn-primary  me-2" type="submit">Download</button>
         </form>
-        <p>
-            <a href="Account/Manage/DeletePersonalData" class="btn btn-danger">Delete</a>
-        </p>
+
+            <a href="Account/Manage/DeletePersonalData" class="btn btn-danger  ms-2">Delete</a>
+        </div>
     </div>
 </div>
 
