--- a/QdaoCaseManager/QdaoCaseManager/Components/Layout/NavMenu.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Layout/NavMenu.razor
@@ -35,6 +35,11 @@
                 <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Auth Required
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="case">
+                <span class="bi bi-lock-nav-menu" aria-hidden="true"></span> Case
+            </NavLink>
+        </div>
     </nav>
 </div>
 
