Resolve namespace change issues

--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ResetPassword.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ResetPassword.razor
@@ -5,6 +5,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using QdaoCaseManager.Data
+@using QdaoCaseManager.Shared.Entites
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
