--- a/QdaoCaseManager/QdaoCaseManager.Client/_Imports.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using QdaoCaseManager.Client
+@using QdaoCaseManager.Shared.Entites
