--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ExternalLogin.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ExternalLogin.razor
@@ -7,6 +7,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using QdaoCaseManager.Data
+@using QdaoCaseManager.Shared.Entites
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
