--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Login.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Login.razor
@@ -4,6 +4,7 @@
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using QdaoCaseManager.Data
+@using QdaoCaseManager.Shared.Entites
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject ILogger<Login> Logger
