--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/EnableAuthenticator.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/EnableAuthenticator.razor
@@ -6,6 +6,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using QdaoCaseManager.Data
+@using QdaoCaseManager.Shared.Entites
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
