--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -2,6 +2,7 @@
 
 @using Microsoft.AspNetCore.Identity
 @using QdaoCaseManager.Data
+@using QdaoCaseManager.Shared.Entites
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
