--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/Index.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/Index.razor
@@ -3,6 +3,7 @@
 @using System.ComponentModel.DataAnnotations
 @using Microsoft.AspNetCore.Identity
 @using QdaoCaseManager.Data
+@using QdaoCaseManager.Shared.Entites
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
