--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/Manage/TwoFactorAuthentication.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Http.Features
 @using Microsoft.AspNetCore.Identity
 @using QdaoCaseManager.Data
+@using QdaoCaseManager.Shared.Entites
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
