--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ResendEmailConfirmation.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Pages/ResendEmailConfirmation.razor
@@ -6,6 +6,7 @@
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
 @using QdaoCaseManager.Data
+@using QdaoCaseManager.Shared.Entites
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
