--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Shared/ExternalLoginPicker.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Shared/ExternalLoginPicker.razor
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
 @using QdaoCaseManager.Data
+@using QdaoCaseManager.Shared.Entites
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject IdentityRedirectManager RedirectManager
