--- a/QdaoCaseManager/QdaoCaseManager/Components/Account/Shared/ManageNavMenu.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using QdaoCaseManager.Data
+@using QdaoCaseManager.Shared.Entites
 
 @inject SignInManager<ApplicationUser> SignInManager
 
