--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/AddEditCase.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/AddEditCase.razor
@@ -1,47 +1,48 @@
 ﻿﻿
 @page "/case/add"
 @page "/case/edit/{id:int}"
+@using QdaoCaseManager.Dtos
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @inject HttpClient Http
 @inject NavigationManager NavigationManager
 @if(Id == null)
 {
-    <h3>Crate Game</h3>
-    <PageTitle>Crate Game</PageTitle>
+    <h3>Create Case</h3>
+    <PageTitle>Create  Case</PageTitle>
 }
 else
 {
-    <h3>Edit @Case.Title</h3>
-    <PageTitle>Edit Game</PageTitle>
+    <h3>Edit @CaseDto.Tittle</h3>
+    <PageTitle>Create Case </PageTitle>
 
 }
 
-<EditForm Model="@Case" OnValidSubmit="HandleSubmit">
+<EditForm Model="@CaseDto" OnValidSubmit="HandleSubmit">
     <DataAnnotationsValidator />
     <div class="mb-3">
-        <label for="Case.Title" class="form-label">Tittle</label>
+        <label for="CaseDto.Tittle" class="form-label">Tittle</label>
         <div class="col-md-4">
-            <InputText class="form-control" @bind-Value="Case.Title" />
+            <InputText class="form-control" @bind-Value="CaseDto.Tittle" />
         </div>
-        <ValidationMessage For="@(() => Case.Title)" />
+        <ValidationMessage For="@(() => CaseDto.Tittle)" />
     </div>
     <div class="mb-3">
-        <label for="Case.Description" class="form-label">Description</label>
+        <label for="CaseDto.Description" class="form-label">Description</label>
         <div class="col-md-4">
-            <InputText class="form-control" @bind-Value="Case.Description" />
+            <InputText class="form-control" @bind-Value="CaseDto.Description" />
         </div>
-        <ValidationMessage For="@(() => Case.Description)" />
+        <ValidationMessage For="@(() => CaseDto.Description)" />
     </div>
     <div class="mb-3">
         <label for="Status" class="form-label">Status</label>
         <div class="col-md-4">
-            <InputSelect class="form-control" @bind-Value="Case.Status">
+            <InputSelect class="form-control" @bind-Value="CaseDto.Status">
                 <option value="">-- Select Status --</option>
                 <option value="Male">Male</option>
                 <option value="Female">Female</option>
             </InputSelect>
         </div>
-        <ValidationMessage For="@(() => Case.Status)" />
+        <ValidationMessage For="@(() => CaseDto.Status)" />
     </div>
     <div class="form-group">
         <button type="submit" class="btn btn-primary">Save</button>
@@ -51,34 +52,31 @@ else
 @code {
     [Parameter]
     public int? Id { get; set; }
-    public Case Case { get; set; } = new ();
-    public IDictionary<int, string> UserSelectList = new Dictionary<int, string>();
-    public IDictionary<int, string> CaseStausSelectList = new Dictionary<int, string>();
+    public CreateUpdateCaseDto CaseDto { get; set; } = new();
 
     protected override async Task OnParametersSetAsync()
     {
         if(Id is not null)
         {
-            var result = await Http.GetFromJsonAsync<Case>($"api/cases/{(int)Id}");
-            if (result is not null) Case = result;
+            var result = await Http.GetFromJsonAsync<CreateUpdateCaseDto>($"api/cases/{(int)Id}");
+            if (result is not null) CaseDto = result;
         }
-       
+
     }
     protected async Task HandleSubmit()
     {
-        if (Id is not null) 
-            await Http.PutAsJsonAsync($"api/cases/{Id}", Case);
-        else
-            await Http.PostAsJsonAsync("api/cases", Case);
+        if (Id is not null)
+        {
+            await Http.PutAsJsonAsync($"api/cases/{Id}", CaseDto);
 
-         HandleCancel();
+        }
+        else{
+            await Http.PostAsJsonAsync("api/cases", CaseDto);
+
+        }
     }
-    protected async Task GetUserSelectList()
-    {
-        var result = await Http.GetFromJsonAsync<List<UserSelectList>>("api/Employee/GetCityList");
-        UserSelectList = 
-    }
-    protected void HandleCancel()
+
+    protected async Task HandleCancel()
     {
         NavigationManager.NavigateTo("/case");
     }
