--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/Index.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/Index.razor
@@ -1,6 +1,11 @@
-﻿@page "/case"
+﻿
+
+@page "/case";
 @using Microsoft.AspNetCore.Authorization
-@using QdaoCaseManager.Shared.Entites
+@using QdaoCaseManager.Client.Shared
+@using QdaoCaseManager.Shared.Dtos
+@using System.Text.Json
+@using System.Text
 @attribute [Authorize]
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @inject HttpClient HttpClient
@@ -17,21 +22,14 @@
         </a>
     </div>
     <div class="input-group col">
-        <input type="text" class="form-control" placeholder="Search case by title"
-               @bind="searchQuery" @bind:event="oninput" @onkeyup="FilterCases" />
-        @if (searchQuery.Length > 0)
-        {
-            <div class="input-group-append">
-                <button class="btn btn-danger" @onclick="ResetSearch">
-                    <i class="fas fa-times"></i>
-                </button>
-            </div>
-        }
+        <input type="text" class="form-control" placeholder="Search case by Tittle"
+               @bind="filter.QueryString" @bind:event="oninput" @onkeyup="LoadCases" />
+        
     </div>
 </div>
 <br />
 
-@if (cases == null)
+@if (Cases == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -49,14 +47,14 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var caseItem in cases)
+            @foreach (var caseItem in Cases)
             {
                 <tr>
                     <td>@caseItem.Id</td>
-                    <td>@caseItem.Title</td>
+                    <td>@caseItem.Tittle</td>
                     <td>@caseItem.Description</td>
-                    <td>@caseItem.Status</td>
-                    <td>@caseItem.AssignedToUser?.UserName</td>
+                    <td>@caseItem.StatusString</td>
+                    <td>@caseItem.AssignedToUserName</td>
                     <td>
                         <a href='/case/edit/@caseItem.Id' class="btn btn-outline-dark" role="button">
                             Edit
@@ -70,59 +68,63 @@ else
             }
         </tbody>
     </table>
+     <Pagination Page="@filter.CurrentPage" TotalItems="@filter.TotalItems" PageSize="@filter.PageSize" OnPageChanged="@OnPageChanged" />
 
     <div class="modal fade" id="deleteCaseModal" data-bs-backdrop="static" data-bs-keyboard="false">
         <div class="modal-dialog">
             <div class="modal-content">
-                <!-- Modal content for case deletion confirmation -->
+                <div class="modal-body">
+                <p>Are you sure you want to delete this case?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger">Delete</button>
+            </div>
             </div>
         </div>
     </div>
 }
 @code {
-
-    private List<Case> cases = new();
-    private List<Case> filteredCases = new();
-    private Case selectedCase = new();
-    private string searchQuery = string.Empty;
-
+    private IList<CaseDto> Cases { get; set; } = new List<CaseDto>();
+    private FilterCaseDto filter { get; set; } = new FilterCaseDto
+                                                    {
+                                                        CurrentPage = 1,
+                                                        PageSize = 10
+                                                    };
+    private bool isLoading = false;
     protected override async Task OnInitializedAsync()
     {
-        await LoadCase();
+        isLoading = true;
+        await LoadCases();
+        isLoading = false;
     }
 
-    private async Task LoadCase()
+    protected async Task LoadCases()
     {
-        cases = await HttpClient.GetFromJsonAsync<List<Case>>("api/case");
-        UpdateFilteredCases();
-    }
+        var responseData = await HttpClient.GetFromJsonAsync<IList<CaseDto>>($"api/cases/{JsonSerializer.Serialize(filter)}");
+        if (responseData is not null)
+        {
+            Cases = responseData;
+            filter.TotalItems = Cases.Count;
+        }
 
-    private void UpdateFilteredCases()
-    {
-        filteredCases = string.IsNullOrWhiteSpace(searchQuery)
-            ? cases
-            : cases.Where(x => x.Title.Contains(searchQuery, StringComparison.OrdinalIgnoreCase)).ToList();
+        else
+        {
+            // Handle error
+        }
+        
     }
-
-    protected void FilterCases()
+    protected async Task OnPageChanged(int newPage)
     {
-        UpdateFilteredCases();
-    }
-
-    protected void ConfirmDeletion(int caseId)
-    {
-        selectedCase = cases.FirstOrDefault(x => x.Id == caseId);
+        filter.CurrentPage = newPage;
+        await LoadCases();
     }
 
     protected async Task DeleteCase(int caseId)
     {
         await HttpClient.DeleteAsync($"api/case/{caseId}");
-        await LoadCase();
+        await LoadCases();
     }
-
-    public void ResetSearch()
-    {
-        searchQuery = string.Empty;
-        UpdateFilteredCases();
-    }
+   
+   
 }
