--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/Index.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/Index.razor
@@ -1,11 +1,8 @@
-﻿
-
-@page "/case";
+﻿@page "/case";
 @using Microsoft.AspNetCore.Authorization
 @using QdaoCaseManager.Client.Shared
+@using QdaoCaseManager.Extra
 @using QdaoCaseManager.Shared.Dtos
-@using System.Text.Json
-@using System.Text
 @attribute [Authorize]
 @rendermode @(new InteractiveWebAssemblyRenderMode(prerender:false))
 @inject HttpClient HttpClient
@@ -23,8 +20,8 @@
     </div>
     <div class="input-group col">
         <input type="text" class="form-control" placeholder="Search case by Tittle"
-               @bind="filter.QueryString" @bind:event="oninput" @onkeyup="LoadCases" />
-        
+               @bind="filter.SearchString" @bind:event="oninput" @onkeyup="LoadCases" />
+
     </div>
 </div>
 <br />
@@ -47,7 +44,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var caseItem in Cases)
+            @foreach (var caseItem in Cases.Items)
             {
                 <tr>
                     <td>@caseItem.Id</td>
@@ -68,29 +65,29 @@ else
             }
         </tbody>
     </table>
-     <Pagination Page="@filter.CurrentPage" TotalItems="@filter.TotalItems" PageSize="@filter.PageSize" OnPageChanged="@OnPageChanged" />
+    <Pagination Page="@Cases.PageIndex" TotalItems="@Cases.TotalPages" PageSize="@filter.PageSize" OnPageChanged="@OnPageChanged" />
 
     <div class="modal fade" id="deleteCaseModal" data-bs-backdrop="static" data-bs-keyboard="false">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-body">
-                <p>Are you sure you want to delete this case?</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                <button type="button" class="btn btn-danger">Delete</button>
-            </div>
+                    <p>Are you sure you want to delete this case?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger">Delete</button>
+                </div>
             </div>
         </div>
     </div>
 }
 @code {
-    private IList<CaseDto> Cases { get; set; } = new List<CaseDto>();
+    private PaginatedList<CaseDto> Cases { get; set; } 
     private FilterCaseDto filter { get; set; } = new FilterCaseDto
-                                                    {
-                                                        CurrentPage = 1,
-                                                        PageSize = 10
-                                                    };
+        {
+            CurrentPage = 1,
+            PageSize = 10
+        };
     private bool isLoading = false;
     protected override async Task OnInitializedAsync()
     {
@@ -101,18 +98,20 @@ else
 
     protected async Task LoadCases()
     {
-        var responseData = await HttpClient.GetFromJsonAsync<IList<CaseDto>>($"api/cases/{JsonSerializer.Serialize(filter)}");
-        if (responseData is not null)
-        {
-            Cases = responseData;
-            filter.TotalItems = Cases.Count;
-        }
+        var apiUrl = "api/cases?" +
+          $"SearchString={filter.SearchString}&" +
+          $"CreateFrom={filter.CreateFrom?.ToString("yyyy-MM-dd")}&" +
+          $"CreateTo={filter.CreateTo?.ToString("yyyy-MM-dd")}&" +
+          $"AssignedToUserId={filter.AssignedToUserId}&" +
+          $"CurrentPage={filter.CurrentPage}&" +
+          $"PageSize={filter.PageSize}";
 
-        else
-        {
-            // Handle error
-        }
-        
+
+            var response = await HttpClient.GetFromJsonAsync<PaginatedList<CaseDto>>(apiUrl);
+            if (response is not null)
+                Cases = response;
+            else
+                throw new Exception($"Something went wrong while getting data with : {apiUrl}");
     }
     protected async Task OnPageChanged(int newPage)
     {
@@ -125,6 +124,6 @@ else
         await HttpClient.DeleteAsync($"api/case/{caseId}");
         await LoadCases();
     }
-   
-   
+
+
 }
