--- a/QdaoCaseManager/QdaoCaseManager/Components/App.razor
+++ b/QdaoCaseManager/QdaoCaseManager/Components/App.razor
@@ -15,7 +15,9 @@
 <body>
     <Routes />
     <script src="_framework/blazor.web.js"></script>
-    <script src="~/app.js"></script>
+    <!-- Bootstrap JS  -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
