Update Note Api and Change Case Api route and change in ui

--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/AddEditCase.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/AddEditCase.razor
@@ -124,7 +124,7 @@
 
         var response = await HttpClient
                             .GetFromJsonAsync<IList<CaseUserSelectList>>(
-                             "api/cases/getCaseUsers");
+                             "api/cases/GetUserSelectListItems");
 
         if (response is not null)
             UserSelectList = response;
