--- a/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/Index.razor
+++ b/QdaoCaseManager/QdaoCaseManager.Client/Pages/Cases/Index.razor
@@ -159,7 +159,7 @@ else
     {
         var response = await HttpClient
                             .GetFromJsonAsync<IList<CaseUserSelectList>>(
-                             "api/cases/getCaseUsers");
+                             "api/cases/GetUserSelectListItems");
 
         if (response is not null)
             UserSelectList = response;
